tests/errors/semantics/type_parameter_type_in_funcsig.odl
main :: () -> void  {
    myint :: 1;
    add := (int, myint) -> int;
};